docker-registry/docker-registry-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: registry-headers
  namespace: registry
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
